[gd_scene load_steps=2 format=3 uid="uid://tmmv71oilec1"]

[ext_resource type="Script" path="res://scripts/multiplayerController.gd" id="1_jtqnm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtqnm")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 88.0
offset_right = 167.0
offset_bottom = 130.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 87.0
offset_right = 331.0
offset_bottom = 129.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 87.0
offset_right = 501.0
offset_bottom = 129.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 23.0
offset_right = 627.0
offset_bottom = 54.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 25.0
offset_right = 184.0
offset_bottom = 48.0
text = "Type Name Here:"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
